# vulkan-tutorial

./: .dependencies  .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  glslc.ps1  run.cmake  run.ps1  run.sh  vd
assets/shaders/: simple_shader.frag  simple_shader.vert
cli/: .gitignore  CMakeLists.txt
cli/lib/cli/: CMakeLists.txt
cli/lib/cli/include/: cli.h
cli/lib/cli/src/: App.cpp  App.h  Command.cpp  Command.h  Context.cpp  Context.h  Help.cpp  Help.h  Option.cpp  Option.h
cli/src/: AddLibraryCommand.cpp  AddLibraryCommand.h  App.cpp  App.h  BuildProjectCommand.cpp  BuildProjectCommand.h  Command.cpp  Command.h  CompileShadersCommand.cpp  CompileShadersCommand.h  Context.cpp  Context.h  Environment.h  FileSystem.cpp  FileSystem.h  Flag.cpp  Flag.h  Help.cpp  Help.h  HelpCommand.cpp  HelpCommand.h  InstallDependenciesCommand.cpp  InstallDependenciesCommand.h  InstallGLFWCommand.cpp  InstallGLFWCommand.h  Option.cpp  Option.h  RunProjectCommand.cpp  RunProjectCommand.h  bar  foo  main.cpp
cmake/: compile_shaders.cmake  post_build.cmake  pre_build.cmake  pre_link.cmake
cmake/modules/: Findglfw3.cmake
lib/: .versions
scripts/: build_exe.sh  clean_project.sh  compile_shaders.sh  gen.ps1  gen.sh  generate_project.sh  glslc.sh  install_cli.bat  install_cli.sh  run_project.sh
scripts/setup/: 1-install_dependencies.sh  2-build_and_install_glfw.sh  3-build_project.sh
src/: App.cpp  App.h  Assert.h  Environment.h  FileSystem.cpp  FileSystem.h  GraphicsDevice.cpp  GraphicsDevice.h  Log.cpp  Log.h  Vertex.h  Vulkan.cpp  Vulkan.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUniformBuffer.cpp  (+6 more)
